ForeignMMAPDataAccess: initial version